Bug 166602 - In a vertical text box, the cursor is on the left
Summary: In a vertical text box, the cursor is on the left
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Textbox Vertical-Text
  Show dependency treegraph
 
Reported: 2025-05-16 01:25 UTC by Saburo
Modified: 2025-06-23 15:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screencast (22.66 KB, image/gif)
2025-05-16 01:25 UTC, Saburo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Saburo 2025-05-16 01:25:02 UTC
Description:
It's confusing because the text cursor is to the left of the character.

Steps to Reproduce:
1.Create New Presentation document.
2.Change Layouts to "Vertical Title, Vertical Text"
3.Enter text into the textbox.

Actual Results:
The cursor appears on the left

Expected Results:
Displayed on the same line as the text


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34cf82953ccd260a05a1c3838178ba50314e2eef
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ja-JP (ja_JP.UTF-8); UI: en-US
Calc: threaded
Comment 1 Saburo 2025-05-16 01:25:59 UTC
Created attachment 200841 [details]
screencast
Comment 2 Saburo 2025-05-16 01:26:46 UTC
author	Michael Stahl
commit 34cf82953ccd260a05a1c3838178ba50314e2eef

editeng: extract ImpEditView::ImplGetCursorRectAndMaybeScroll()
... to separate it from the VCL-Cursor/LOK logic.

Change-Id: I60f533630e6c55e832d1471c1512d6651107d5a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183310
Comment 3 Dominick 2025-05-16 02:16:25 UTC
Reproduced in 25.8. After following the initial instructions, any typed text appears above the cursor rather than on the same line. 
Also, confirmed this is not an issue in 25.2.

Additional info:
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 923da8a3855afae1f3f3a5f50d1fec08bbc02438
CPU threads: 24; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: bbb074479178df812d175f709636b368952c2ce3
CPU threads: 24; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 4 Commit Notification 2025-06-23 13:06:24 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cd2ea6cc012f1096494b4198cfbb3ea56859157

tdf#166602 editeng: fix painting cursor in vertical text

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Stahl 2025-06-23 15:23:47 UTC
fixed
Comment 6 Commit Notification 2025-06-23 15:24:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e289ec223a14460abb7e09fbdf6a868f0a1f71cf

tdf#166602 editeng: fix painting cursor in vertical text

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.