tdf#166602 editeng: fix painting cursor in vertical text

The size is relative to the top right.

(regression from commit 34cf82953ccd260a05a1c3838178ba50314e2eef)

Change-Id: Id0e63e40c580a4b700cc09b476bd8bc9f60aa368
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186823
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Jenkins